# outputdatareader

./: .gitignore  README.md  pyproject.toml
outputdatareader/: readers.py  scanners.py
tests/: test_outputdatareader.py
