[tool.poetry]
name = "outputdatareader"
version = "0.9.1"
description = "A reader for text file output from the program."
authors = ["takatoh <takatoh.m@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/takatoh/outputdatareader"
repository = "https://github.com/takatoh/outputdatareader"
include = ["README.ja.md"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
